--- a/tex/task4.tex.erb
+++ b/tex/task4.tex.erb
@@ -1,17 +1,9 @@
-<% require 'yaml' %>
-
-<% global = YAML.load_file("data/global.yaml") %>
-<% data = YAML.load_file("data/#{global['variant']}.yaml") %>
 <% r_xy = File.new('data.tmp').gets.to_f %>
-
-<% require './statistic.rb' %>
-<% require './latex_helper.rb' %>
-<% include LatexHelper %>
 
 <%
 sample = {}
 for i in 1 .. 4
-  sample[i] = Statistic::Sample::new(data[i]['data'])
+  sample[i] = Statistics::Sample::new(data[i]['data'])
   sample[i].hist_step = data[i]['histstep'] if data[i]['histstep']
   sample[i].hist_start  = data[i]['histstart'] if data[i]['histstart']
 end
