Fixed mess with images and added no-task-data comment

--- a/tex/task1.tex.erb
+++ b/tex/task1.tex.erb
@@ -95,12 +95,12 @@ end
 \end{table}
 
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.1.eps}
+  \includegraphics[scale=1]{images/st-1}
   \caption{Эмпирическая функция распределения выборки 1.}\label{pic1}
 \end{figure}
 
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.2.eps}
+  \includegraphics[scale=1]{images/st-2}
   \caption{Эмпирическая функция распределения выборки 2.}\label{pic2}
 \end{figure}
 
@@ -176,12 +176,12 @@ $h_j = \dfrac{m_j}{n(a_j-a_{j-1})}$. Полученная фигура, сост
 величин.
 
 \begin{figure}[t]
-  \includegraphics[scale=1]{images/st.3.eps}
+  \includegraphics[scale=1]{images/st-3}
   \caption{Гистограмма относительных частот выборки 1.}\label{pic3}
 \end{figure}
 
 \begin{figure}[t]
-  \includegraphics[scale=1]{images/st.4.eps}
+  \includegraphics[scale=1]{images/st-4}
   \caption{Гистограмма относительных частот выборки 2.}\label{pic4}
 \end{figure}
 
@@ -357,32 +357,32 @@ $$
 для выборки 2~--- рис.~\ref{pic8},~\ref{pic9} и~\ref{pic10}).
 
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.7.eps}
+  \includegraphics[scale=1]{images/st-7}
   \caption{Равномерная вероятностная бумага для выборки 1.}\label{pic5}
 \end{figure}
 
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.5.eps}
+  \includegraphics[scale=1]{images/st-5}
   \caption{Нормальная вероятностная бумага для выборки 1.}\label{pic6}
 \end{figure}
 
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.6.eps}
+  \includegraphics[scale=1]{images/st-6}
   \caption{Экспоненциальная вероятностная бумага для выборки 1.}\label{pic7}
 \end{figure}
 
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.10.eps}
+  \includegraphics[scale=1]{images/st-10}
   \caption{Равномерная вероятностная бумага для выборки 2.}\label{pic8}
 \end{figure}
 
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.8.eps}
+  \includegraphics[scale=1]{images/st-8}
   \caption{Нормальная вероятностная бумага для выборки 2.}\label{pic9}
 \end{figure}
 
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.9.eps}
+  \includegraphics[scale=1]{images/st-9}
   \caption{Экспоненциальная вероятностная бумага для выборки 2.}\label{pic10}
 \end{figure}
 
