--- a/tex/task3.tex.erb
+++ b/tex/task3.tex.erb
@@ -187,7 +187,7 @@ $n_{\bullet j}$ & <%="$1$ & "*d2.size%>$<%=d1.size%>$ \\ \hline
 \newpage
 
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.11.eps}
+  \includegraphics[scale=1]{images/st-11}
   \caption{Выборка случайной величины $(\xi;\zeta)$.}\label{pic:11}
 \end{figure}
 
@@ -218,7 +218,7 @@ $$
 
 Графики прямых регрессии изображены на рисунке~\ref{pic:12}.
 \begin{figure}[h]
-  \includegraphics[scale=1]{images/st.12.eps}
+  \includegraphics[scale=1]{images/st-12}
   \caption{Графики прямых регрессии.}\label{pic:12}
 \end{figure}
 \endinput
