Changed commas to dots for consistency (revertable)

--- a/tex/task1.tex.erb
+++ b/tex/task1.tex.erb
@@ -257,7 +257,7 @@ $$
 где $ \Phi(x) = \frac{1}{\sqrt{2 \pi}} \int\limits_{0}^{x} {e^{-\frac{x^2}{2}}} dx$ --- функция Лапласа. Сделаем следующую
 замену координат:
 $$  
-	u = x{,} v = \Phi^{-1}(y-0.5),
+	u = x{.} v = \Phi^{-1}(y-0.5),
 $$
 где $ x = \Phi^{-1}(y) $ --- функция, обратная к функции Лапласа. В новых координатах $ (u;v) $ уравнение функции распределения $ y = \Phi(\frac{x-m}{\sigma}) + 0.5, $ примет следующий вид:
 $$  
@@ -296,7 +296,7 @@ $$
 
 Здесь применяют следующую замену координат: 
 $$  
-	u = x{,} v = -\ln(1-y).
+	u = x{.} v = -\ln(1-y).
 $$
 В новых координатах уравнение теоритической функции распределения $ y = F(x,\lambda) $ примет такой вид:
 
