--- a/tex/task4.tex.erb
+++ b/tex/task4.tex.erb
@@ -11,7 +11,7 @@ end
 
 \subsection*{\hspace*{\parindent}Задание 4} 
 По двум данным в задании 1 выборкам проверить гипотезу о некоррелированности 
-соответствующих случайных величин с уровнем значимости $0{,}1$.
+соответствующих случайных величин с уровнем значимости $0{.}1$.
 
 \par
 {\em Решение.} 
@@ -57,28 +57,28 @@ T_{\text{набл}} =
 <%= roundn(t, 6) %>.
 $$
 
-Имея в виду, что уровень значимости $\alpha$ и число степеней свободы для распределения Стьюдента равно $25-2=23$, найдем $T_{\text{крит}2} = 1{,}71387$.
+Имея в виду, что уровень значимости $\alpha$ и число степеней свободы для распределения Стьюдента равно $25-2=23$, найдем $T_{\text{крит}2} = 1{.}71387$.
 <% if t.abs >= 1.71387 %>
-	 $|T_{\text{набл}}| \geqslant t_{\text{крит}2}$, cледовательно, гипотеза $H_0$ отвергается c уровнем значимости $\alpha = 0{,}1$.
+	 $|T_{\text{набл}}| \geqslant t_{\text{крит}2}$, cледовательно, гипотеза $H_0$ отвергается c уровнем значимости $\alpha = 0{.}1$.
 	 
 	\par
 	{\em Вывод.}
 	После проверки гипотезы о значимости выборочного коэффициента корреляции 
 	для выборки случайной величины $(\xi; \zeta)$, было сделано заключение о том, 
 	что гипотезу $H_0$ : $r_{\xi\zeta} = 0$ необходимо отвергнуть c уровнем 
-	значимости $\alpha = 0{,}1$. Это означает, что случайные величины 
+	значимости $\alpha = 0{.}1$. Это означает, что случайные величины 
 	коррелированны, выборочный коэффициент корреляции значительно 
 	отличается от нуля.
 
 <% else %>
- $|T_{\text{набл}}| $<$ t_{\text{крит}2}$, cледовательно, нет оснований отвергать гипотезу $H_0$ c уровнем значимости $\alpha = 0{,}1$.
+ $|T_{\text{набл}}| $<$ t_{\text{крит}2}$, cледовательно, нет оснований отвергать гипотезу $H_0$ c уровнем значимости $\alpha = 0{.}1$.
 	 
 	\par
 	{\em Вывод.}
 	После проверки гипотезы о значимости выборочного коэффициента корреляции 
 	для выборки случайной величины $(\xi; \zeta)$, было сделано заключение о том, 
 	что нет оснований отвергать гипотезу $H_0$ : $r_{\xi\zeta} = 0$ c уровнем 
-	значимости $\alpha = 0{,}1$. Это означает, что случайные величины 
+	значимости $\alpha = 0{.}1$. Это означает, что случайные величины 
 	некоррелированны, выборочный коэффициент корреляции незначительно 
 	отличается от нуля.
 
