--- a/tex/task5.tex.erb
+++ b/tex/task5.tex.erb
@@ -8,7 +8,7 @@ end
 %>
 
 \subsection*{\hspace*{\parindent}Задание 5} 
-Для данных в задании 5 двух независимых выборок из нормальной совокупности проверить гипотезу о равенстве математических ожиданий с уровнем значимости $0{,}1$ при конкурирующей гипотезе:\\
+Для данных в задании 5 двух независимых выборок из нормальной совокупности проверить гипотезу о равенстве математических ожиданий с уровнем значимости $0{.}1$ при конкурирующей гипотезе:\\
 В задании 5а $H_1 : M(\xi) \neq M(\zeta)$;\\
 В задании 5б $H_2 : M(\xi) > M(\zeta)$;\\
 В задании 5в $H_3 : M(\xi) < M(\zeta)$.
@@ -113,40 +113,40 @@ $$
 \begin{enumerate}
  \renewcommand{\labelenumi}{\theenumi)}
  \item Конкурирующая гипотеза $H_1 : M(\xi) \neq M(\zeta)$. Критическая область двусторонняя; найдем
-$Z_{\text{крит}}$ из уравнения $F_{\text{ст}}(Z_{\text{крит}}) = 1 - \alpha/2$, где $\alpha=0{,}1$.
-$Z_{\text{крит}} = 1{,}644854$.
+$Z_{\text{крит}}$ из уравнения $F_{\text{ст}}(Z_{\text{крит}}) = 1 - \alpha/2$, где $\alpha=0{.}1$.
+$Z_{\text{крит}} = 1{.}644854$.
 
 <% if roundn(z, 6).abs >= 1.644854 %>
-	Так как $|Z_{\text{набл}}| = <%= roundn(z, 6).abs %> \geqslant 1{,}644854 = Z_{\text{крит}}$, то гипотезу $H_0$ о равенстве
+	Так как $|Z_{\text{набл}}| = <%= roundn(z, 6).abs %> \geqslant 1{.}644854 = Z_{\text{крит}}$, то гипотезу $H_0$ о равенстве
 	математических ожиданий отвергаем с уровнем значимости $\alpha$ в пользу гипотезы $H_1 : M(\xi) \neq M(\zeta)$:
 	математические ожидания случайных величин различаются значимо.
 <% else %>
-	Так как $|Z_{\text{набл}}| = <%= roundn(z, 6).abs %> $<$ 1{,}644854 = Z_{\text{крит}}$, то то нет оснований отвеграть гипотезу $H_0$ о равенстве
+	Так как $|Z_{\text{набл}}| = <%= roundn(z, 6).abs %> $<$ 1{.}644854 = Z_{\text{крит}}$, то то нет оснований отвеграть гипотезу $H_0$ о равенстве
 	математических ожиданий с уровнем значимости $\alpha$, т.е.
 	математические ожидания случайных величин различаются незначительно.
 <% end %>
 
  \item Конкурирующая гипотеза $H_2 : M(\xi) > M(\zeta)$. Критическая область правосторонняя, найдем
-$Z_{\text{крит}}$ из уравнения $F_{\text{ст}}(Z_{\text{крит}}) = 1 - \alpha$, где $\alpha=0{,}1$.
-$Z_{\text{крит}} = 1{,}281552$.
+$Z_{\text{крит}}$ из уравнения $F_{\text{ст}}(Z_{\text{крит}}) = 1 - \alpha$, где $\alpha=0{.}1$.
+$Z_{\text{крит}} = 1{.}281552$.
 
 <% if roundn(z, 6) >= 1.281551 %>
-	Так как $Z_{\text{набл}} = <%=roundn(z, 6)%> \geqslant 1{,}281551 = Z_{\text{крит}}$, то гипотезу $H_0$ о равенстве
+	Так как $Z_{\text{набл}} = <%=roundn(z, 6)%> \geqslant 1{.}281551 = Z_{\text{крит}}$, то гипотезу $H_0$ о равенстве
 	математических ожиданий отвергаем с уровнем значимости $\alpha$ в пользу гипотезы $H_2 : M(\xi) > M(\zeta)$.
 <% else %>
-	Так как $Z_{\text{набл}} = <%=roundn(z, 6)%> $<$ 1{,}281551 = Z_{\text{крит}}$, то нет оснований отвеграть гипотезу $H_0$ о равенстве
+	Так как $Z_{\text{набл}} = <%=roundn(z, 6)%> $<$ 1{.}281551 = Z_{\text{крит}}$, то нет оснований отвеграть гипотезу $H_0$ о равенстве
 	математических ожиданий с уровнем значимости $\alpha$.
 <% end %>
 
  \item Конкурирующая гипотеза $H_3 : M(\xi) < M(\zeta)$. Критическая область левосторонняя, найдем
-$Z_{\text{крит}}$ из уравнения $F_{\text{ст}}(Z_{\text{крит}}) = 1 - \alpha$, где $\alpha=0{,}1$.
+$Z_{\text{крит}}$ из уравнения $F_{\text{ст}}(Z_{\text{крит}}) = 1 - \alpha$, где $\alpha=0{.}1$.
 
 <% if roundn(z, 6) >= -1.28155%>
-	Так как $Z_{\text{набл}} = <%=roundn(z, 6)%> \geqslant -1{,}28155 = Z_{\text{крит}}$, 
+	Так как $Z_{\text{набл}} = <%=roundn(z, 6)%> \geqslant -1{.}28155 = Z_{\text{крит}}$, 
 	то нет оснований отвеграть гипотезу $H_0$ о равенстве математических с уровнем 
 	значимости $\alpha$.
 <% else %>
-	Так как $Z_{\text{набл}} = <%=roundn(z, 6)%> $<$ -1{,}28155 = Z_{\text{крит}}$,
+	Так как $Z_{\text{набл}} = <%=roundn(z, 6)%> $<$ -1{.}28155 = Z_{\text{крит}}$,
 	то отвергаем гипотезу $H_0$ в пользу $H_3 : M(\xi) < M(\zeta)$ с уровнем 
 	значимости $\alpha$.
 <% end %>
