--- a/tex/task6.tex.erb
+++ b/tex/task6.tex.erb
@@ -8,7 +8,7 @@ end
 %>
 
 \subsection*{\hspace*{\parindent}Задание 6}
-Для данных в задании 5 двух независимых выборок из нормальной совокупности проверить гипотезу о равенстве дисперсий с уровнем значимости $0{,}1$ при конкурирующей гипотезе:\\
+Для данных в задании 5 двух независимых выборок из нормальной совокупности проверить гипотезу о равенстве дисперсий с уровнем значимости $0{.}1$ при конкурирующей гипотезе:\\
 В задании 6а $H_1 : D(\xi) \neq D(\zeta)$;\\
 В задании 6б $H_2 : D(\xi) > D(\zeta)$;\\
 В задании 6в $H_3 : D(\xi) < D(\zeta)$.
