--- a/tex/task8.tex.erb
+++ b/tex/task8.tex.erb
@@ -100,12 +100,12 @@ $\\$
 <%if t56.abs < t%>
 	$|t_{\text{набл}}| = <%= t56.abs %> < <%= t %> = t_{\text{крит}}$,
 	Следовательно, нет оснований отвергнуть гипотезу $H_0$ о ранговой некоррелированности 
-	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{,}1: можно
+	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{.}1: можно
 	считать, что ранговая корреляция между ними отсутствует.
 <% else %>
 	$|t_{\text{набл}}| = <%= t56.abs %> > <%= t %> = t_{\text{крит}}$,
 	Следовательно, отвергаем гипотезу $H_0$ о ранговой некоррелированности 
-	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{,}1.
+	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{.}1.
 	<% if (rho56.abs-1).abs <= 0.1 && rho56 > 0%>
 	Кооэффициент корреляции Спирмена близок к $1$, связь <<лучший-лучший>>.
 	<% elsif (rho56.abs-1).abs <= 0.1 && rho56 < 0%>
@@ -120,12 +120,12 @@ $\\$
 <%if t57.abs < t%>
 	$|t_{\text{набл}}| = <%= t57.abs %> < <%= t %> = t_{\text{крит}}$,
 	Следовательно, нет оснований отвергнуть гипотезу $H_0$ о ранговой некоррелированности 
-	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{,}1: можно
+	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{.}1: можно
 	считать, что ранговая корреляция между ними отсутствует.
 <% else %>
 	$|t_{\text{набл}}| = <%= t57.abs %> > <%= t %> = t_{\text{крит}}$,
 	Следовательно, отвергаем гипотезу $H_0$ о ранговой некоррелированности 
-	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{,}1.
+	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{.}1.
 	<% if (rho57.abs-1).abs <= 0.1 && rho57 > 0%>
 	Кооэффициент корреляции Спирмена близок к $1$, связь <<лучший-лучший>>.
 	<% elsif (rho57.abs-1).abs <= 0.1 && rho57 < 0%>
@@ -144,7 +144,7 @@ $\\$
 <% else %>
 	$|t_{\text{набл}}| = <%= t67.abs %> > <%= t %> = t_{\text{крит}}$,
 	Следовательно, отвергаем гипотезу $H_0$ о ранговой некоррелированности 
-	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{,}1.
+	этих признаков в пользу гипотезы $H_1$ c уровнем значимости 0{.}1.
 	<% if (rho67.abs-1).abs <= 0.1 && rho67 > 0%>
 	Кооэффициент корреляции Спирмена близок к $1$, связь <<лучший-лучший>>.
 	<% elsif (rho67.abs-1).abs <= 0.1 && rho67 < 0%>
