--- a/tex/task7.tex.erb
+++ b/tex/task7.tex.erb
@@ -8,11 +8,11 @@ end
 %>
 
 \subsection*{\hspace*{\parindent}Задание 7}
-Для каждой из выборок, приведенных в задании 5, с уровнем значимости 0{,}1, проверить гипотезу о том, что
-вероятность $P$ появления наблюдения, превосходящего 5, равна 0{,}5 при конкурирующей гипотезе:\\
-В задании 6а $H_1 : P(X>5) \neq 0{,}5$;\\
-В задании 6б $H_2 : P(X>5) > 0{,}5$;\\
-В задании 6в $H_3 : P(X>5) < 0{,}5$.\par
+Для каждой из выборок, приведенных в задании 5, с уровнем значимости 0{.}1, проверить гипотезу о том, что
+вероятность $P$ появления наблюдения, превосходящего 5, равна 0{.}5 при конкурирующей гипотезе:\\
+В задании 6а $H_1 : P(X>5) \neq 0{.}5$;\\
+В задании 6б $H_2 : P(X>5) > 0{.}5$;\\
+В задании 6в $H_3 : P(X>5) < 0{.}5$.\par
 
 \par
 {\em Решение.} 
@@ -108,11 +108,11 @@ $4$ & $<%= roundn(m2, 4) %>$ & <%= roundn(m2n, 4) %> & <%= roundn(u2, 4) %> & &
 <% if u1.abs >= z1%>
 	Так как $|U_3| = <%= u1.abs %> \geqslant <%= z1 %> = U_{\text{крит}}$,
 	то для выборки 3 отвергаем гипотезу $H_0$ с уровнем значимости $<%= 0.1 %>$ 
-	в пользу гипотезы $H_1$: вероятность того, что $X > 5$, значимо отличается от 0{,}5. 
+	в пользу гипотезы $H_1$: вероятность того, что $X > 5$, значимо отличается от 0{.}5. 
 <% else %>
 	Так как $|U_3| = <%= u1.abs %> < <%= z1 %> = U_{\text{крит}}$,
 	то для выборки 3 нет оснований отвергнуть гипотезу $H_0$ с уровнем значимости $<%= 0.1 %>$ 
-	в пользу гипотезы $H_1$: вероятность того, что $X > 5$, незначимо отличается от 0{,}5. 
+	в пользу гипотезы $H_1$: вероятность того, что $X > 5$, незначимо отличается от 0{.}5. 
 <% end %>
 
 <% if u2.abs >= z1 %>
@@ -131,35 +131,35 @@ $4$ & $<%= roundn(m2, 4) %>$ & <%= roundn(m2n, 4) %> & <%= roundn(u2, 4) %> & &
 
 <% if u1 >= z2 %>
 	Для выборки 3 $U_3 = <%= u1 %> \geqslant <%= z2 %> = U_{\text{крит}}$, поэтому отвергаем $H_0$ 
-	в пользу $H_2$ с уровнем значимости $\alpha = 0{,}1$.
+	в пользу $H_2$ с уровнем значимости $\alpha = 0{.}1$.
 <% else %>
 	Для выборки 3 $U_3 = <%= u1 %> < <%= z2 %> = U_{\text{крит}}$, поэтому нет оснований отвергнуть гипотезу $H_0$ 
-	в пользу $H_2$ с уровнем значимости $\alpha = 0{,}1$.
+	в пользу $H_2$ с уровнем значимости $\alpha = 0{.}1$.
 <% end %>
 
 <% if u2 >= z2 %>
 	Для выбороки 4 $U_4 = <%= u2 %> \geqslant <%= z2 %> = U_{\text{крит}}$, поэтому отвергаем гипотезу $H_0$ 
-	в пользу $H_2$ с уровнем значимости $\alpha = 0{,}1$.
+	в пользу $H_2$ с уровнем значимости $\alpha = 0{.}1$.
 <% else %>
 	Для выбороки 4 $U_4 = <%= u2 %> \geqslant <%= z2 %> = U_{\text{крит}}$, поэтому нет оснований отвергнуть гипотезу$H_0$ 
-	в пользу $H_2$ с уровнем значимости $\alpha = 0{,}1$.
+	в пользу $H_2$ с уровнем значимости $\alpha = 0{.}1$.
 <% end %>
 
 \item Конкурирующая гипотеза $H_3$: $P(X > 5) < <%= p %>$.
 <% if u1 <= -z2 %>
 	Для выборки 3 $U_3 = <%= u1 %> \leqslant <%= -z2 %> = -U_{\text{крит}}$, поэтому отвергаем гипотезу $H_0$ 
-	в пользу $H_3$ с уровнем значимости $\alpha = 0{,}1$.
+	в пользу $H_3$ с уровнем значимости $\alpha = 0{.}1$.
 <% else %>
 	Для выборки 3 $U_3 = <%= u1 %> < <%= -z2 %> = -U_{\text{крит}}$, поэтому нет оснований отвергнуть гипотезугипотезу $H_0$ 
-	в пользу $H_3$ с уровнем значимости $\alpha = 0{,}1$.
+	в пользу $H_3$ с уровнем значимости $\alpha = 0{.}1$.
 <% end %>
 
 <% if u2 > -z2%>
 	Для выборки 4 $U_4 = <%= u2 %> > <%= -z2 %> = -U_{\text{крит}}$, поэтому нет оснований отвергнуть гипотезу $H_0$ 
-	в пользу $H_3$ с уровнем значимости $\alpha = 0{,}1$.
+	в пользу $H_3$ с уровнем значимости $\alpha = 0{.}1$.
 <% else %>
 	Для выборки 4 $U_4 = <%= u2 %> \leqslant <%= -z2 %> = -U_{\text{крит}}$, поэтому отвергаем гипотезу $H_0$ 
-	в пользу $H_3$ с уровнем значимости $\alpha = 0{,}1$.
+	в пользу $H_3$ с уровнем значимости $\alpha = 0{.}1$.
 <% end %>
 \end{enumerate}
 \endinput
