Fixed task 7 logic problem

--- a/tex/task7.tex.erb
+++ b/tex/task7.tex.erb
@@ -141,7 +141,7 @@ $4$ & $<%= roundn(m2, 4) %>$ & <%= roundn(m2n, 4) %> & <%= roundn(u2, 4) %> & &
 	Для выбороки 4 $U_4 = <%= u2 %> \geqslant <%= z2 %> = U_{\text{крит}}$, поэтому отвергаем гипотезу $H_0$ 
 	в пользу $H_2$ с уровнем значимости $\alpha = 0{.}1$.
 <% else %>
-	Для выбороки 4 $U_4 = <%= u2 %> \geqslant <%= z2 %> = U_{\text{крит}}$, поэтому нет оснований отвергнуть гипотезу$H_0$ 
+	Для выбороки 4 $U_4 = <%= u2 %> < <%= z2 %> = U_{\text{крит}}$, поэтому нет оснований отвергнуть гипотезу$H_0$ 
 	в пользу $H_2$ с уровнем значимости $\alpha = 0{.}1$.
 <% end %>
 
