Fixed someone's fail in task 6

--- a/tex/task6.tex.erb
+++ b/tex/task6.tex.erb
@@ -57,7 +57,7 @@ s2=roundn(sample[4].S2_star, 6)
 
 Тогда $F_{\text{набл}} = <%= f %>$, количество степеней свободы $k_1=k_2=25-1=24$.
 	<%if [s1,s2].max==s2%>
-	Так, как большей дисперсии сообтветвторая из случайных величин, то перенумеруем их так, что 
+	Так, как большей дисперсии соответствует вторая из случайных величин, то перенумеруем их так, что 
 \begin{align*}
  \overline{x_1} = <%= roundn(sample[4].mean, 6) %>; && \overline{x_2} = <%= roundn(sample[3].mean, 6) %>;\\
  {S_{x_1}^*}^2 = <%= roundn(sample[4].S2_star, 6) %>; && {S_{x_2}^*}^2 = <%= roundn(sample[3].S2_star, 6) %>.
