--- a/tex/title.tex.erb
+++ b/tex/title.tex.erb
@@ -3,18 +3,21 @@
 \vspace*{-\headheight}\vspace*{-\headsep}
 
 {\centering
-{\sc
-федеральное агентство по образованию\\
-московский государственный индустриальный университет\\
-кафедра <<общей и прикладной математики>>\\
+\textsc{ 
+министерство образования и науки российской федерации\\
+\textbf{\small{федеральное государственное бюджетное образовательное\\
+учреждение высшего профессионального образования\\
+<<Московский государственный индустриальный университет>>}\\
+(ФГБОУ ВПО <<МГИУ>>)}\\
+кафедра общей и прикладной математики\\
 }
 
 
-\vspace{7cm plus 1mm minus 1mm}
+\vspace{5.5cm plus 1mm minus 1mm}
 
 
 {\large\bf
-Курсовая работа по дисциплине\\
+Типовой расчёт по дисциплине\\
 <<Теория вероятностей и математическая статистика>>
 }
 
